--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -6,82 +6,126 @@
     android:background="@color/white">
 
     <LinearLayout
+        android:id="@+id/centerLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/_15sdp"
-        android:layout_marginTop="@dimen/_40sdp"
-        android:layout_marginRight="@dimen/_15sdp"
-        android:layout_marginBottom="@dimen/_40sdp"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/bottomLayout"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_marginRight="@dimen/_20sdp"
         android:background="@color/white"
         android:gravity="center"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sign Up"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_15sdp" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_8sdp">
+            android:layout_marginTop="@dimen/_5sdp">
 
             <EditText
-                android:id="@+id/userNameEditText"
+                android:id="@+id/firstNameEditText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/quicksand"
-                android:hint="User Name"
+                android:layout_height="@dimen/_40sdp"
+                android:background="@drawable/item_border"
+                android:hint="First Name"
                 android:imeOptions="actionNext"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:maxLength="40"
                 android:maxLines="1"
+                android:paddingLeft="@dimen/_8sdp"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_12sdp" />
+                android:textColorHint="@color/black"
+                android:textSize="@dimen/_12sdp"
+                app:fontFamily="@font/poppins" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_8sdp">
+            android:layout_marginTop="@dimen/_5sdp">
 
             <EditText
-                android:id="@+id/emailEditText"
+                android:id="@+id/lastNameEditText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/quicksand"
-                android:hint="Email"
+                android:layout_height="@dimen/_40sdp"
+                android:background="@drawable/item_border"
+                android:hint="Last Name"
                 android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:maxLength="50"
+                android:inputType="textCapWords"
+                android:maxLength="40"
                 android:maxLines="1"
+                android:paddingLeft="@dimen/_8sdp"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_12sdp" />
+                android:textColorHint="@color/black"
+                android:textSize="@dimen/_12sdp"
+                app:fontFamily="@font/poppins" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_5sdp">
+
+            <EditText
+                android:id="@+id/mobileNumberEditText"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_40sdp"
+                android:background="@drawable/item_border"
+                android:hint="Mobile Number"
+                android:imeOptions="actionNext"
+                android:inputType="number"
+                android:maxLength="10"
+                android:maxLines="1"
+                android:paddingLeft="@dimen/_8sdp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:textSize="@dimen/_12sdp"
+                app:fontFamily="@font/poppins" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_empid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_4sdp">
+            android:layout_marginTop="@dimen/_8sdp">
 
             <EditText
                 android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/quicksand"
+                android:layout_height="@dimen/_40sdp"
+                android:background="@drawable/item_border"
                 android:hint="password"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:maxLines="1"
+                android:paddingLeft="@dimen/_8sdp"
                 android:password="true"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_12sdp" />
+                android:textColorHint="@color/black"
+                android:textSize="@dimen/_12sdp"
+                app:fontFamily="@font/poppins" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
+
         <TextView
-            android:id="@+id/registerTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_25sdp"
+            android:id="@+id/loginTextView"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="@dimen/_30sdp"
             android:background="@drawable/blue_background_curved"
-            android:fontFamily="@font/quicksand"
+            android:gravity="center"
             android:paddingLeft="@dimen/_20sdp"
             android:paddingTop="@dimen/_5sdp"
             android:paddingRight="@dimen/_20sdp"
@@ -89,15 +133,42 @@
             android:text="Register"
             android:textColor="@color/white"
             android:textSize="@dimen/_12sdp"
-            app:fontFamily="@font/quicksand" />
+            app:fontFamily="@font/poppins_medium" />
+
 
     </LinearLayout>
 
     <ImageView
-        android:layout_width="@dimen/_80sdp"
-        android:layout_height="@dimen/_80sdp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/_40sdp"
-        android:src="@drawable/gh_logo" />
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_marginLeft="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:src="@drawable/chevron_left" />
+
+    <ImageView
+        android:id="@+id/bottomLayout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_150sdp"
+        android:layout_alignParentBottom="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/bottom_background" />
+
+    <TextView
+        android:id="@+id/registerTextView"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="right"
+        android:layout_marginTop="@dimen/_16sdp"
+        android:layout_marginBottom="@dimen/_20sdp"
+        android:gravity="center"
+        android:paddingLeft="@dimen/_20sdp"
+        android:paddingTop="@dimen/_5sdp"
+        android:paddingRight="@dimen/_5sdp"
+        app:fontFamily="@font/poppins_medium"
+        android:paddingBottom="@dimen/_5sdp"
+        android:text="Have an account ? Signin"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_12sdp" />
 
 </RelativeLayout>
