--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color"
+    android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -24,15 +24,14 @@
                 android:id="@+id/backImageView"
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
-                android:padding="@dimen/_4sdp"
-                android:src="@drawable/ic_back_arrow" />
+                android:padding="@dimen/_4sdp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_8sdp"
                 android:gravity="center"
-                android:text="Grocery &amp; Staples"
+                android:text="All Categories"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_13sdp"
                 app:fontFamily="@font/poppins_medium" />
@@ -109,13 +108,12 @@
 
             </RelativeLayout>
 
-
         </LinearLayout>
 
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/productsRecyclerView"
+        android:id="@+id/categoriesRecyclerView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/_10sdp"
