--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -24,17 +24,15 @@
             android:textColor="@color/black"
             android:textSize="@dimen/_15sdp" />
 
-
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp">
+            android:layout_marginTop="@dimen/_15sdp">
 
             <EditText
                 android:id="@+id/mobileNumberEditText"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_40sdp"
-                android:background="@drawable/item_border"
+                android:layout_height="wrap_content"
                 android:hint="Mobile Number"
                 android:imeOptions="actionNext"
                 android:inputType="number"
@@ -47,7 +45,6 @@
                 app:fontFamily="@font/poppins" />
 
         </com.google.android.material.textfield.TextInputLayout>
-
 
         <TextView
             android:id="@+id/loginTextView"
@@ -69,6 +66,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/backImageView"
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_35sdp"
         android:layout_marginLeft="@dimen/_15sdp"
