--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,6 +108,7 @@
                         android:id="@+id/categoriesImageView"
                         android:layout_width="@dimen/_25sdp"
                         android:layout_height="@dimen/_25sdp"
+                        android:clickable="false"
                         android:padding="@dimen/_3sdp"
                         android:src="@drawable/ic_categories_black" />
 
@@ -116,6 +117,7 @@
                         android:id="@+id/categoriesTextview"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:clickable="false"
                         android:gravity="center"
                         android:text="Categories"
                         android:textColor="@color/black"
