--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-
     <RelativeLayout
         android:id="@+id/topLayout"
         android:layout_width="match_parent"
@@ -161,7 +160,6 @@
                             android:text="MRP"
                             android:textColor="@color/grey"
                             android:textSize="@dimen/_11sdp"
-                            android:textStyle="bold"
                             app:fontFamily="@font/poppins_medium" />
 
                         <TextView
@@ -173,14 +171,11 @@
                             android:text="₹420"
                             android:textColor="@color/grey"
                             android:textSize="@dimen/_11sdp"
-                            android:textStyle="bold"
                             app:fontFamily="@font/poppins_medium" />
 
                     </LinearLayout>
 
-
                 </LinearLayout>
-
 
             </LinearLayout>
 
@@ -336,7 +331,7 @@
             android:layout_weight="0.5"
             android:background="#17435C"
             android:gravity="center"
-            android:text="Add to Wishlist"
+            android:text="Add to Cart"
             android:textColor="@color/white"
             android:textSize="@dimen/_12sdp"
             android:textStyle="bold" />
@@ -347,7 +342,7 @@
             android:layout_weight="0.5"
             android:background="@color/green"
             android:gravity="center"
-            android:text="Add to Cart"
+            android:text="Buy Now"
             android:textColor="@color/white"
             android:textSize="@dimen/_12sdp"
             android:textStyle="bold" />
