--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,9 +51,9 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/cartLayout"
                 android:layout_width="@dimen/_28sdp"
                 android:layout_height="@dimen/_28sdp"
-                android:id="@+id/cartLayout"
                 android:gravity="center_vertical">
 
                 <ImageView
@@ -81,7 +81,6 @@
 
             </RelativeLayout>
 
-
         </LinearLayout>
 
         <LinearLayout
@@ -94,14 +93,14 @@
                 android:layout_width="@dimen/_25sdp"
                 android:layout_height="@dimen/_25sdp"
                 android:layout_marginLeft="@dimen/_5sdp"
-                android:padding="@dimen/_6sdp"
-                android:src="@drawable/ic_menu"
+                android:padding="@dimen/_4sdp"
+                android:src="@drawable/ic_location"
                 android:tint="@color/grey" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginLeft="@dimen/_6sdp"
                 android:gravity="center|left"
                 android:orientation="vertical">
 
