--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,34 +3,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
         android:orientation="horizontal"
-        android:paddingBottom="@dimen/_5sdp"
-        android:paddingTop="@dimen/_5sdp">
+        android:paddingTop="@dimen/_5sdp"
+        android:paddingBottom="@dimen/_5sdp">
 
         <EditText
             android:id="@+id/searchEditText"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_30sdp"
             android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_marginRight="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_10sdp"
             android:background="@drawable/box"
             android:drawableLeft="@drawable/arrow_left"
-            android:drawablePadding="@dimen/_4sdp"
             android:drawableRight="@drawable/close"
+            android:drawablePadding="@dimen/_4sdp"
             android:drawableTint="#989898"
             android:enabled="true"
             android:focusable="true"
-            android:fontFamily="@font/quicksand"
+            android:fontFamily="@font/poppins"
             android:hint="Search Here"
             android:paddingLeft="@dimen/_6sdp"
             android:textSize="@dimen/_11sdp" />
-
 
     </LinearLayout>
 
