--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -123,11 +123,11 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/productNameTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_12sdp"
                     android:layout_weight="0.7"
-                    android:id="@+id/productNameTextView"
                     android:text="Freedom Refined Sunflower Oil 1L Pack"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_13sdp" />
@@ -155,11 +155,11 @@
                             app:fontFamily="@font/poppins_medium" />
 
                         <TextView
+                            android:id="@+id/productPriceTextView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="420"
-                            android:id="@+id/productPriceTextView"
                             android:textColor="@color/green"
                             android:textSize="@dimen/_13sdp"
                             android:textStyle="bold"
@@ -271,70 +271,86 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/strike_through" />
 
-            <LinearLayout
+            <!--<View
+                       <LinearLayout
+                           android:layout_width="match_parent"
+                           android:layout_height="@dimen/_30sdp"
+                           android:layout_marginLeft="@dimen/_10sdp"
+                           android:layout_marginRight="@dimen/_10sdp"
+                           android:gravity="center_vertical"
+                           android:orientation="horizontal">
+
+
+                           <TextView
+                               android:layout_width="0dp"
+                               android:layout_height="wrap_content"
+                               android:layout_weight="0.33"
+                               android:gravity="center"
+                               android:text="About"
+                               android:textColor="@color/green"
+                               android:textSize="@dimen/_11sdp" />
+
+
+                           <TextView
+                               android:layout_width="0dp"
+                               android:layout_height="wrap_content"
+                               android:layout_weight="0.33"
+                               android:gravity="center"
+                               android:text="Nutritional Facts"
+                               android:textColor="@color/black"
+                               android:textSize="@dimen/_11sdp" />
+
+
+                           <TextView
+                               android:layout_width="0dp"
+                               android:layout_height="wrap_content"
+                               android:layout_weight="0.33"
+                               android:gravity="center"
+                               android:text="How to use"
+                               android:textColor="@color/black"
+                               android:textSize="@dimen/_11sdp" />
+
+                       </LinearLayout>
+
+
+                           android:layout_width="match_parent"
+                           android:layout_height="@dimen/_1sdp"
+                           android:background="@drawable/strike_through" />
+
+                       <TextView
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:paddingLeft="@dimen/_10sdp"
+                           android:paddingTop="@dimen/_6sdp"
+                           android:paddingRight="@dimen/_10sdp"
+                           android:paddingBottom="@dimen/_80sdp"
+                           android:text="Freedom Refined Sunflower oil."
+                           android:textSize="@dimen/_10sdp" />
+
+                       <TextView
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:layout_marginTop="@dimen/_10sdp"
+                           android:background="@drawable/strike_through" />
+
+           -->
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_30sdp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_15sdp"
+                android:text="Similar Products"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_13sdp"
+                app:fontFamily="@font/poppins_medium" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/similarProductsRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginRight="@dimen/_10sdp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.33"
-                    android:gravity="center"
-                    android:text="About"
-                    android:textColor="@color/green"
-                    android:textSize="@dimen/_11sdp" />
-
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.33"
-                    android:gravity="center"
-                    android:text="Nutritional Facts"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_11sdp" />
-
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.33"
-                    android:gravity="center"
-                    android:text="How to use"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_11sdp" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:background="@drawable/strike_through" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/_10sdp"
-                android:paddingTop="@dimen/_6sdp"
-                android:paddingRight="@dimen/_10sdp"
-                android:paddingBottom="@dimen/_80sdp"
-                android:text="Freedom Refined Sunflower oil is light in appearance and taste and supplies more Vitamin E than some other vegetable oil. It is a blend of polyunsaturated and monounsaturated fats with low saturated fat levels."
-                android:textSize="@dimen/_10sdp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/strike_through" />
-
+                android:layout_marginRight="@dimen/_10sdp"></androidx.recyclerview.widget.RecyclerView>
 
         </LinearLayout>
-
 
     </androidx.core.widget.NestedScrollView>
 
@@ -346,6 +362,7 @@
         android:weightSum="1">
 
         <TextView
+            android:id="@+id/cartTextView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.5"
